Fix message overflow for mobile

--- a/src/styles/Messages.scss
+++ b/src/styles/Messages.scss
@@ -11,6 +11,7 @@
   margin: 8px 0;
   padding: 6px 16px;
   border: 1px solid #e3e3e3;
+  overflow: auto;
 
   &.user {
     background-color: $color-secondary;
